--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div>
             <h1>Make Your Marketing Real</h1>
             <p class="my-1">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
             </p>
             <a href="#" class="btn-primary">Learn More</a>
             <a href="#" class="btn-secondary">Sign Up</a>
